Add automatic command tracing and updated docs as well as added unit testing